--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -85,7 +85,7 @@ layout: default
     </div>
   </section> <!-- End Section Recent Box -->
   
-  {% include disqus.html %}
+  <!--{% include disqus.html %}-->
   
 </main> <!-- End Section Post Content -->
 
