--- a/assets/css/sass/parts/_header.sass
+++ b/assets/css/sass/parts/_header.sass
@@ -14,7 +14,7 @@
     text-decoration: none
     font-weight: 700
     span
-      color: $highlight
+      color: #ff6939
       font-weight: 400
   nav
     a
