added pages and updated layouts

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,15 +5,11 @@ layout: default
 
   {% include banner.html %}
 
-  <main class="page-content" aria-label="Content">
+	<!--<main class="page-content" aria-label="Content">
   <section class="chapters cf">
       <div class="wrapper flex-row">
-      {{ content }}
-      </div>
+	</div>
   </section>
-  </main>
-  <!--{% include newsletter.html %} -->
-
-  {% include pagination.html %}
+  </main>-->
 
   {% include footer.html %}
