--- a/assets/css/sass/parts/_banner.sass
+++ b/assets/css/sass/parts/_banner.sass
@@ -5,7 +5,7 @@
   .content
     padding: 12rem 0 12rem 0
 
-    .title, .sub_title
+    .title, .sub_title, .s_title
       text-align: center
       color: $white
     .title
@@ -16,4 +16,3 @@
       font-size: 1.35rem
       margin: 0 auto 2rem auto
       line-height: 2.5rem
-      font-style: italic
