--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,8 +2,9 @@
 <section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">
   <div class="wrapper">
     <div class="content">
-      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}Enjoy Freedom{% endif %}</h1>
-      <h2 class="sub_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
+      <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}BE LIMITLESS{% endif %}</h1>
+      <h2 style="color: white;font-size: 1rem;text-align: center;font-style: italic;" class="s_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
+	  <h3 class="sub_title">Hello world, I'm Nyah and this is my portfolio site. I am a computer science co-op student at UTSC. <br>Please use the top bar to navigate around, and take a look at my projects and experience!</h3>
     </div>
   </div>
 </section> <!-- End Section Banner -->
