--- a/assets/css/sass/_media.sass
+++ b/assets/css/sass/_media.sass
@@ -2,7 +2,7 @@
 
 @media only screen and (max-width : 960px)
   .chapters
-    padding: 2rem 0
+    padding: 5px
     .chapter
       width: 49%
       margin: 0 0.5% 1% 0.5%
@@ -10,7 +10,7 @@
 @media only screen and (max-width : 768px)
   #banner
     .content
-      padding: 7rem 0
+      padding: 5px 0
       .title
         font-size: 2.5rem
         margin: 0 0 1rem 0
@@ -58,7 +58,7 @@
         top: 32px
 
   .social_footer
-    padding: 2rem 0
+    padding: 5px 0
     a
       padding: 0.5rem 1rem
       font-size: 1.35rem
