--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3853,6 +3853,48 @@ body {
   background-color: #262626;
   margin: 0;
 }
+.resume .box {
+	background:white;
+	border-radius: 10px;
+	margin: 6vh 6vw 6vh 6vw;
+	animation-delay:0.8s;
+	animation-duration:0.7s;
+	animation-fill-mode: both;
+	animation-name: fadeInDown;
+}
+.resume .inner-box{
+	padding:1vh 2vw 5px 4vw;
+}
+.resume .date{
+	font-size: 0.8rem;
+	color: grey;
+	margin: 0;
+}
+.resume .section_header {
+	font-size: 1.5rem;
+	margin: 0;
+	color:#069;
+}
+.resume .title{
+	color: white;
+	padding-left: 6vw;
+	animation-delay:0.8s;
+	animation-duration:0.7s;
+	animation-fill-mode: both;
+	animation-name: fadeInDown;
+}
+.resume a{
+	color: #4fa5d0;
+	text-decoration: none;
+}
+.resume .resume_title {
+	font-size: 1.2rem;
+	margin:20px 0 10px 0;
+}
+.resume .details {
+	font-size: 1.0rem;
+	margin: 0;
+}
 
 p {
   font-size: 1.1rem;
@@ -4895,7 +4937,6 @@ cite {
     margin-top: 1rem;
 	margin-bottom: 0;
   }
-  .author .
   .author .author_social span {
     display: inline-block;
     padding-right: 0.5rem;
