Moved header and footer to default layout and removed from pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,14 @@
 <html lang="en">
 {% include head.html %}
 <body>
-
+  {% include header.html %}
+  
   {{ content }}
 
   {% include arrow_top.html %}
   {% include javascripts.html %}
   {% include analytics.html %}
+  
+  {% include footer.html %}
 </body>
 </html>
