--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4430,7 +4430,7 @@ cite {
 .author {
   padding: 2rem 0.5rem;
   margin-bottom: 1.5rem;
-  background-color: #ffffff;
+  background-color: #ffffffc7;
 }
 
 .author .author_image {
@@ -4625,7 +4625,7 @@ cite {
   width: 100%;
   height: 100vh;
   min-height: 700px;
-  background-image: url(../img/bg_about.jpg);
+  background-image: url(../img/alaska.jpg);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
