--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -1,13 +1,11 @@
 ---
 layout: default
-title: Projects
-permalink: /n/projects/
 ---
-  
+
 <section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">
   <div class="wrapper">
     <div class="content">
-      <h1 class="title">Projects</h1>
+      <h1 class="title">{{ page.tag }}</h1>
       <h2 class="sub_title">Take a look at some of the things I have worked on below</h2>
     </div>
   </div>
@@ -16,6 +14,36 @@ permalink: /n/projects/
 <main class="page-content" aria-label="Content">
 <section class="chapters cf">
 <div class="wrapper flex-row">
+
+	{% if site.tags[page.tag] %}
+        {% for post in site.tags[page.tag] %}
+		
+		
+		<div class="chapter">
+    <a href="{{post.url | prepend: site.baseurl}}">
+      {% if post.img %}
+        <img class="postimg" style="width=30vw" src={{ "../assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+		
+	  {% else %}
+		<h1>hi</h1>
+	  {% endif %}
+	  
+    </a>
+    <a href="{{post.url | prepend: site.baseurl}}">
+      <div class="chapter_inner">
+        <p class="chapter_number">{{post.date | date: '%Y, %b %d'}}</p>
+        <h3 class="chapter_title">{{post.title}}</h3>
+      </div>
+    </a>
+  </div>
+		
+        {% endfor %}
+    {% else %}
+        <p>There are no posts for this tag.</p>
+    {% endif %}
+
+
+<!--
   {% for post in site.posts %}
   <div class="chapter">
     <a href="{{post.url | prepend: site.baseurl}}">
@@ -30,9 +58,7 @@ permalink: /n/projects/
       </div>
     </a>
   </div>
-  {% endfor %}
+  {% endfor %}-->
   </div>
   </section>
   </main>
-  
-  <!--{% include pagination.html %}-->
