--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,23 @@
 ---
 layout: default
 ---
+{% assign post = page %}
+{% if post.tags.size > 0 %}
+    {% capture tags_content %}Posted with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+    {% for post_tag in post.tags %}
+        {% for data_tag in site.data.tags %}
+            {% if data_tag.slug == post_tag %}
+                {% assign tag = data_tag %}
+            {% endif %}
+        {% endfor %}
+        {% if tag %}
+            {% capture tags_content_temp %}{{ tags_content }}<a href="/blog/tag/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+            {% assign tags_content = tags_content_temp %}
+        {% endif %}
+    {% endfor %}
+{% else %}
+    {% assign tags_content = '' %}
+{% endif %}
 <main class="post_content">
   <article class="post">
     <header>
@@ -27,6 +44,7 @@ layout: default
         </div>
         <div class="post_tag">
           <span>Tags:</span>
+		  <p id="post-meta">{{ tags_content }}</p>
           {% for tag in page.tags %}
           <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">{{ tag }}</a>
           {% endfor %}
