--- a/_layouts/blog_by_tag.html
+++ b/_layouts/blog_by_tag.html
@@ -5,7 +5,7 @@ layout: default
 <section id="banner" data-vide-bg="{{site.baseurl}}/assets/video/{% if site.video %}{{ site.video }}{% endif %}" data-vide-options="posterType: jpg, loop: true, muted: false, position: 50% 50%">
   <div class="wrapper">
     <div class="content">
-      <h1 class="title">{{ page.tag }}</h1>
+      <h1 class="title">{{ page.title }}</h1>
       <h2 class="sub_title">Take a look at some of the things I have worked on below</h2>
     </div>
   </div>
@@ -14,51 +14,25 @@ layout: default
 <main class="page-content" aria-label="Content">
 <section class="chapters cf">
 <div class="wrapper flex-row">
-
 	{% if site.tags[page.tag] %}
         {% for post in site.tags[page.tag] %}
-		
-		
-		<div class="chapter">
-    <a href="{{post.url | prepend: site.baseurl}}">
-      {% if post.img %}
-        <img class="postimg" style="width=30vw" src={{ "../assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
-		
-	  {% else %}
-		<h1>hi</h1>
-	  {% endif %}
-	  
-    </a>
-    <a href="{{post.url | prepend: site.baseurl}}">
-      <div class="chapter_inner">
-        <p class="chapter_number">{{post.date | date: '%Y, %b %d'}}</p>
-        <h3 class="chapter_title">{{post.title}}</h3>
-      </div>
-    </a>
-  </div>
-		
+			<div class="chapter">
+				<a href="{{post.url | prepend: site.baseurl}}">
+				{% if post.img %}
+					<img class="postimg" style="width=30vw" src={{ "../assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+				{% endif %}
+				</a>
+				<a href="{{post.url | prepend: site.baseurl}}">
+				<div class="chapter_inner">
+					<p class="chapter_number">{{post.date | date: '%Y, %b %d'}}</p>
+					<h3 class="chapter_title">{{post.title}}</h3>
+				</div>
+				</a>
+			</div>
         {% endfor %}
     {% else %}
-        <p>There are no posts for this tag.</p>
+        <p>This page hasn't been set up yet, please come back later.</p>
     {% endif %}
-
-
-<!--
-  {% for post in site.posts %}
-  <div class="chapter">
-    <a href="{{post.url | prepend: site.baseurl}}">
-      {% if post.img %}
-        <img class="postimg" style="width=30vw" src={{ "../assets/img/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
-      {% endif %}
-    </a>
-    <a href="{{post.url | prepend: site.baseurl}}">
-      <div class="chapter_inner">
-        <p class="chapter_number">{{post.date | date: '%Y, %b %d'}}</p>
-        <h3 class="chapter_title">{{post.title}}</h3>
-      </div>
-    </a>
-  </div>
-  {% endfor %}-->
   </div>
   </section>
   </main>
