Added coursework link to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
   <a href="{{site.baseurl}}/" class="logo">{% if site.logo %}{{site.logo}}{% else %}N<span>Way</span>{% endif %}</a>
   <nav class="main_menu">
   	<a href="{{site.baseurl}}/projects/">Projects</a>
+  	<a href="{{site.baseurl}}/coursework/">Coursework</a>
 	<a href="{{site.baseurl}}/resume/">Resume</a>
 	<a href="{{site.baseurl}}/events/">Events</a>
     <a href="{{site.baseurl}}/about/">About</a>
