--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3906,11 +3906,13 @@ body {
 	margin: 0;
 }
 .resume {
-	background-attachment:fixed;
+	/*background-attachment:fixed;
 	background-size: auto 100vh;
 	background-image: url(../img/sweden.jpg);
 	background-position:center;
-	background-repeat:no-repeat;
+	background-repeat:no-repeat;*/
+	background-color: #bf334a;
+	background-image: linear-gradient(90deg, #bf334a, #343c66);
 	
 	animation-delay:0.8s;
 	animation-duration:0.7s;
