Add featured project to main page

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -4,7 +4,11 @@
     <div class="content">
       <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}BE LIMITLESS{% endif %}</h1>
       <h2 style="color: white;font-size: 1rem;text-align: center;font-style: italic;" class="s_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
-	  <h3 class="sub_title">Hello world, I'm Nyah and this is my portfolio site. I am a computer science co-op student at UTSC. <br>Please use the top bar to navigate around, and take a look at my projects and experience!</h3>
+    <h3 class="sub_title">
+      I am a computer science co-op student at UTSC. <br>
+      Please use the top bar to navigate around, and take a look at my projects and experience!<br>
+      Featured project: <a href="{{site.baseurl}}/easyrewards" style="color: white;">Easy Rewards</a>
+    </h3>
     </div>
   </div>
 </section> <!-- End Section Banner -->
