--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4100,6 +4100,7 @@ cite {
 .chapters .chapter_inner {
   position: absolute;
   left: 2.5%;
+  right: 2.5%;
   bottom: 10%;
 }
 
@@ -4117,6 +4118,7 @@ cite {
   content: "";
   display: block;
   width: 40px;
+  margin-left: 3px;
   margin-top: 0.3rem;
   border-top: 3px solid #c25b6c;
 }
