--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,9 @@ layout: default
     </header> <!-- End Header -->
 
     <div class="entry_content">
-      {{page.content | markdownify}}
+      <div class="inner_entry_content">
+        {{page.content | markdownify}}
+      </div>
     </div>
     
     <div class="post_wrapper">
