--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4983,7 +4983,8 @@ cite {
 
 .terminal_pg .terminal {
   background: black;
-  font: courier;
+  font-family: courier;
+  font-size: 15px;
   padding: 10px;
   height: 80vh;
   overflow: none;
@@ -5008,6 +5009,8 @@ cite {
   display:table-cell; 
   width:100%;
   border: none;
+  font-family: courier;
+  font-size: 15px;
   background: black;
   color: white;
   outline: none;
