Allow up or down for history, small UI fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5008,7 +5008,7 @@ cite {
   display:table-cell; 
   width:1px;
 }
-.terminal_pg .terminal input{
+.terminal_pg .terminal_half input{
   display:table-cell; 
   width:100%;
   border: none;
