--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4734,6 +4734,20 @@ cite {
           transform: translateY(2px);
 }
 
+.highlightlinenos {
+  background-color: #faf9f9;
+  color: black;
+  border-radius: 3px;
+  margin: 0;
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+.blur {
+  color: transparent;
+  text-shadow: 2px 2px 8px #000;
+}
+
 #banner,
 .main_header,
 .page-content,
