Change featured experience

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
     <h3 class="sub_title">
       I am a computer science co-op student at UTSC. <br>
       Please use the top bar to navigate around, and take a look at my projects and experience!<br>
-      Featured project: <a href="{{site.baseurl}}/easyrewards" style="color: white;">Easy Rewards</a>
+      Featured experience: <a href="{{site.baseurl}}/google-coop" style="color: white;">Google Internship</a>
     </h3>
     </div>
   </div>
