--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@ layout: default
 
   <section class="recent_box">
     <div class="post_wrapper">
-      <h2 class="recent_title">Other things I've worked on:</h2>
+      <h2 class="recent_title">Other things I've done:</h2>
       <div class="recent_list">
         {% for post in site.posts offset:0 limit:6 %}
           {% if post.title %}
