--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,8 +5,8 @@
       <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}BE LIMITLESS{% endif %}</h1>
       <h2 style="color: white;font-size: 1rem;text-align: center;font-style: italic;" class="s_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
     <h3 class="sub_title">
-      I am a computer science co-op student at UTSC. <br>
-      Please use the top bar to navigate around, and take a look at my projects and experience!<br>
+      I am a Site Reliability Engineer. <br>
+      Use the top bar to navigate around, and to look at my projects and experience.<br>
       Featured experience: <a href="{{site.baseurl}}/google-coop" style="color: white;">Google Internship</a>
     </h3>
     </div>
