Make resume printer-friendly

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,7 @@
       <h1 class="title">{% if site.banner-title %}{{ site.banner-title }}{% else %}BE LIMITLESS{% endif %}</h1>
       <h2 style="color: white;font-size: 1rem;text-align: center;font-style: italic;" class="s_title">{% if site.banner-desc %}{{ site.banner-desc }}{% else %}"A journey of a thousand miles begins with a single step". — Lao Tzu{% endif %}</h2>
     <h3 class="sub_title">
-      I am a top engineer and University of Toronto alumni. I am now pursuing my full-time career at Google. <br>
+      Top engineer and University of Toronto alumni, now pursuing my full-time career at Google. <br>
       Explore my site using the top navigation bar to discover my projects, experience, and more. Enjoy your visit!<br>
       Featured experience: <a href="{{site.baseurl}}/google-coop" style="color: white;">Google Internship</a>
     </h3>
