--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
+{% if page.unique_page_id %}
+<body id="{{page.unique_page_id}}">
+{% else %}
 <body>
+{% endif %}
   {% include header.html %}
   
   {{ content }}
