--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -26,6 +26,11 @@ layout: default
           <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
           <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google+" rel="nofollow" target="_blank"><i class="fa fa-google" aria-hidden="true"></i></a>
         </div>
+        {% if page.show_print %}
+        <div class="print_option">
+          <a title="Print page" rel="nofollow" target="_blank" onclick="window.print(); return false"><i class="fa fa-print" aria-hidden="true"></i></a>
+        </div>
+        {% endif %}
       </footer>
     </div>
   </article> <!-- End Section Post -->
